--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="inner">
             <div class="inner-in">
                 <img src="images/header-image.png" alt="和菓子屋あんこのロゴマーク">
-                <h1><a href="/"><img src="images/header-rogo.png" alt="和菓子屋あんこ"></a></h1>
+                <h1><a href="index.html"><img src="images/header-rogo.png" alt="和菓子屋あんこ"></a></h1>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">
+                        <li><a href="index.html">
                                 <span class="nomal">Home</span>
                                 <span class="hover">ホーム</span>
                             </a></li>
@@ -92,14 +92,14 @@
                     <textarea name="info"></textarea>
 
                     <input type="submit" id="otoiawaseru" value="問い合わせる">
-                    <button type="submit" id="close"><a href="/"><img src="images/batu.png" alt="閉じる" width="30"
-                                height="30"></a></button>
+                    <button type="submit" id="close"><a href="index.html"><img src="images/batu.png" alt="閉じる"
+                                width="30" height="30"></a></button>
 
                 </div>
                 <div class="nakami-next">
                     <p>お問い合わせありがとうございました。<br>お客さまの記入された内容は正しく送信されました。</p>
-                    <button type="submit" id="close"><a href="/"><img src="images/batu.png" alt="閉じる" width="30"
-                                height="30"></a></button>
+                    <button type="submit" id="close"><a href="index.html"><img src="images/batu.png" alt="閉じる"
+                                width="30" height="30"></a></button>
                 </div>
 
 
@@ -213,7 +213,7 @@
         <div class="inner">
             <div class="rogo-address">
                 <div class="logo">
-                    <a href="/"><img src="images/footer-rogo.png" alt="和菓子屋あんこ"></a>
+                    <a href="index.html"><img src="images/footer-rogo.png" alt="和菓子屋あんこ"></a>
                 </div>
                 <address>〒904-0115 沖縄県 北谷町 美浜1丁目5-16</address>
             </div>
