トップページとび先変更

--- a/menu.html
+++ b/menu.html
@@ -26,10 +26,10 @@
         <div class="inner">
             <div class="inner-in">
                 <img src="images/header-image.png" alt="和菓子屋あんこのロゴマーク">
-                <h1><a href="/"><img src="images/header-rogo.png" alt="和菓子屋あんこ"></a></h1>
+                <h1><a href="index.html"><img src="images/header-rogo.png" alt="和菓子屋あんこ"></a></h1>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">
+                        <li><a href="index.html">
                                 <span class="nomal">Home</span>
                                 <span class="hover">ホーム</span>
                             </a></li>
@@ -364,14 +364,14 @@
         <div class="inner">
             <div class="rogo-address">
                 <div class="logo">
-                    <a href="/"><img src="images/footer-rogo.png" alt="和菓子屋あんこ"></a>
+                    <a href="index.html"><img src="images/footer-rogo.png" alt="和菓子屋あんこ"></a>
                 </div>
                 <address>〒904-0115 沖縄県 北谷町 美浜1丁目5-16</address>
             </div>
             <div class="nav-small">
                 <nav>
                     <ul>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="">Contact</a></li>
                         <li><a href="">Privacy Policy</a></li>
                         <li><a href="">Terms And Conditions</a></li>
                     </ul>
