メニューリンク先変更

--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
                                 <span class="nomal">Menu</span>
                                 <span class="hover">メニュー</span>
                             </a></li>
-                        <li><a href="/#access-page">
+                        <li><a href="index.html#access-page">
                                 <span class="nomal">Access</span>
                                 <span class="hover">アクセス</span>
                             </a></li>
