ハンバーガーメニューアクセスの調整

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="concept.html">Concept</a></li>
                     <li><a href="taste.html">Taste</a></li>
-                    <li><a href="index.html#access-page">Access</a></li>
+                    <li><a href="index.html#access-page" id="responsive-close">Access</a></li>
                 </ul>
                 <ul class="sns-nav">
                     <li><a href=""><i class="fab fa-instagram"></i></a></li>
