--- a/taste.html
+++ b/taste.html
@@ -118,6 +118,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="concept.html">Concept</a></li>
                 <li><a href="taste.html">Taste</a></li>
+                <li><a href="menu.html">Menu</a></li>
                 <li><a href="index.html#access-page">Access</a></li>
             </ul>
             <ul class="sns-nav">
