--- a/menu.html
+++ b/menu.html
@@ -122,7 +122,7 @@
             </ul>
             <ul class="sns-nav">
                 <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""></a><i class="fab fa-twitter"></i></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
                 <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
             </ul>
         </div>
