リンク先修正

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         <textarea name="info"></textarea>
 
                         <input type="submit" id="otoiawaseru" value="問い合わせる">
-                        <button type="submit" id="close"><a href="/"><img src="images/batu.png" alt="閉じる" width="30"
-                                    height="30"></a></button>
+                        <button type="submit" id="close"><a href="index.html"><img src="images/batu.png" alt="閉じる"
+                                    width="30" height="30"></a></button>
 
                     </div>
                     <div class="nakami-next">
